--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- Your code here -->
   <img src="something.jpg">
   <img src="something.jpg" alt="something!">
-  <img src="something.jpg" alt="something!" title="this is something!">
+  <img src="something.jpg" alt="someghing!" title="this is something!">
 
 </body>
 </html>
